@@ -236,7 +236,7 @@ endmacro()
 function(WEBKIT_MAKE_FORWARDING_HEADERS framework)
     set(options FLATTENED)
     set(oneValueArgs DESTINATION TARGET_NAME)
-    set(multiValueArgs DIRECTORIES EXTRA_DIRECTORIES DERIVED_SOURCE_DIRECTORIES FILES)
+    set(multiValueArgs DIRECTORIES DERIVED_SOURCE_DIRECTORIES FILES)
     cmake_parse_arguments(opt "${options}" "${oneValueArgs}" "${multiValueArgs}" ${ARGN})
     set(headers ${opt_FILES})
     if (opt_DESTINATION)
@@ -265,21 +265,6 @@ function(WEBKIT_MAKE_FORWARDING_HEADERS framework)
             VERBATIM
         )
         list(APPEND fwd_headers ${fwd_header})
-    endforeach ()
-    foreach (dir IN LISTS opt_EXTRA_DIRECTORIES)
-        set(dir ${CMAKE_CURRENT_SOURCE_DIR}/${dir})
-        file(GLOB_RECURSE files RELATIVE ${dir} ${dir}/*.h)
-        foreach (header IN LISTS files)
-            get_filename_component(header_dir ${header} DIRECTORY)
-            file(MAKE_DIRECTORY ${destination}/${header_dir})
-            set(fwd_header ${destination}/${header})
-            add_custom_command(OUTPUT ${fwd_header}
-                COMMAND ${CMAKE_COMMAND} -E copy ${dir}/${header} ${fwd_header}
-                MAIN_DEPENDENCY ${dir}/${header}
-                VERBATIM
-            )
-            list(APPEND fwd_headers ${fwd_header})
-        endforeach ()
     endforeach ()
     if (opt_TARGET_NAME)
         set(target_name ${opt_TARGET_NAME})
